--- a/frontend-developer-study/3-styles.css
+++ b/frontend-developer-study/3-styles.css
@@ -1,13 +1,30 @@
 /* This is a single-line comment */
 
+
+/*
+body(
+  background-color:#f4f4f4;
+  color:#555555
+
+  front-family:Arial, Helvetica,sans-serif;
+  front-size:16px;
+  front-weight:normal;
+  font: normal 16px Arial,Helvetica,sans-serif;
+
+  line-height::1.6em;
+  margin:0;
+}
+
+*/
+
 body {
   background-color: rgb(231, 238, 240);
 }
 
-section, 
+section,
 div.h2 {
   border: 0px solid black;
-  background-color: rgb(247, 250, 250);
+  background-color: rgb(250, 252, 252);
   border-radius: 10px;
   padding: 5px;
   margin: 10px;
@@ -83,16 +100,20 @@ nav a:hover:not(.active) {
   color: white;
 }
 
-
-buttom.back a{
+buttom.back a {
   background-color: #c674ba;
   padding: 5px;
   margin: 10px;
   border-radius: 10px;
   color: #f1f1f1;
   text-decoration: none;
- 
-  position: fixed;
 
- 
+  position: fixed;
+}
+code {
+  color:red;
+  font-size: larger;
+  font-weight: 900;
+  background-color: rgb(194, 215, 195);
+
 }
